indoatlantic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indoatlantic-ingress
  namespace: coreapps
 
  annotations:
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/app-root: /get_data.php
    kubernetes.io/ingress.class: "indoatlantic-ingress"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod-indoatlantic"
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - indoatlantic.iplon.co.in
    secretName: indoatlantic-tls-prod

  rules:
  - host: indoatlantic.iplon.co.in
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: iplon-apache-indoatlantic
            port: 
              number: 8080
